loopdowhile.Poucet2.scala.code
var fin = false
while (fin == false){
  do avance() {
    while(crossing() == false) {
      
    }
  }
}